- Added and implemented SimpleObjectQueue.java - Implemeneted Practical Requirements r6 - Got DMBServer to accept client connections and create respective files - implemented TimeStamp.java to server date and date + time - added queues to DMBServer

--- a/src/propertiesFiles/DMBProperties.properties
+++ b/src/propertiesFiles/DMBProperties.properties
@@ -3,7 +3,7 @@
 # You can extend as needed, i.e., to add new variables.
 
 # server FQDN
-serverAddress=jz75.host.cs.st-andrews.ac.uk
+serverAddress=trenco.cs.st-andrews.ac.uk
 
 # server port number 
 serverPort=22054
@@ -12,8 +12,14 @@ serverPort=22054
 directoryFile=CS2003-usernames-2021.csv
 
 # location of message board PHP file
-boardDirectory=/cs/home/username/nginx_default/cs2003-net2
+boardDirectory=/cs/home/username/nginx_default/cs2003/CS2003-P3/src/Website
 
 # logging (this is not a requirement but is generally a good idea)
 logFile=cs2003-net2.log
+
+# max number of clients that server can queue
+maxClients=30
+
+# max number of messages that server can queue
+maxMessages=60
 
