- Implemented Requirement r8 into separate client-server files DMBServer1.java & DMBClient1.java

--- a/src/propertiesFiles/DMBProperties.properties
+++ b/src/propertiesFiles/DMBProperties.properties
@@ -3,7 +3,7 @@
 # You can extend as needed, i.e., to add new variables.
 
 # server FQDN
-serverAddress=trenco.cs.st-andrews.ac.uk
+serverAddress=jz75.host.cs.st-andrews.ac.uk
 
 # server port number 
 serverPort=22054
